--- a/frontmain/templates/frontmain/dash.html
+++ b/frontmain/templates/frontmain/dash.html
@@ -11,7 +11,7 @@
       <div class="home-content-1">
         <div></div>
         <div class="home-content-2">
-          <h3 class=" ml-1 mt-3" style="color: white;">Don't Compromise on Quality</h3>
+          <h3 class=" ml-1 mt-3" style="color: white;">The Best Writers<br>On The Market</h3>
           <hr>
           <p class="text-spacing-sm" style="color: white;">We offer a variety of destinations to travel to, ranging from exotic to some extreme ones. They include very popular countries and cities like Paris, Rio de Janeiro, Cairo and a lot of others.</p><a class="button button-default-outline button-nina button-sm" href="#">learn more</a>
         </div>
@@ -163,6 +163,108 @@
   </div>
 </section>
 
+
+
+
+<section class="section section-variant-1 bg-default novi-background bg-cover"> 
+  <div class="container container-wide">
+    <div class="row row-fix justify-content-xl-end row-30 text-center text-xl-left">
+      <div class="col-xl-8">
+        <div class="parallax-text-wrap">
+          <h3>Subject Areas</h3><span class="parallax-text">Subjects</span>
+        </div>
+        <hr class="divider divider-decorate">
+      </div>
+      <div class="col-xl-3 text-xl-right"><a class="button button-secondary button-nina" href="#">view all subjects</a></div>
+    </div>
+    <div class="row row-50">
+      <div class="col-md-6 col-xl-4">
+        <article class="event-default-wrap">
+          <div class="event-default">
+            <figure class="event-default-image"><img src="{% static 'frontmain/images2/finance.jpg' %}" alt="" width="570" height="370"/>
+            </figure>
+            <div class="event-default-caption"><a class="button button-xs button-secondary button-nina" href="{% url 'login' %}">learn more</a></div>
+          </div>
+          <div class="event-default-inner">
+            <h5><a class="event-default-title" href="{% url 'login' %}">Finance</a></h5><span class="heading-5">from KES300</span>
+          </div>
+        </article>
+      </div>
+      <div class="col-md-6 col-xl-4">
+        <article class="event-default-wrap">
+          <div class="event-default">
+            <figure class="event-default-image"><img src="{% static 'frontmain/images2/art.jpg' %}" alt="" width="570" height="370"/>
+            </figure>
+            <div class="event-default-caption"><a class="button button-xs button-secondary button-nina" href="{% url 'login' %}">learn more</a></div>
+          </div>
+          <div class="event-default-inner">
+            <h5><a class="event-default-title" href="{% url 'login' %}">Arts</a></h5><span class="heading-5">from KES300</span>
+          </div>
+        </article>
+      </div>
+      <div class="col-md-6 col-xl-4">
+        <article class="event-default-wrap">
+          <div class="event-default">
+            <figure class="event-default-image"><img src="{% static 'frontmain/images2/economics.jpg' %}" alt="" width="570" height="370"/>
+            </figure>
+            <div class="event-default-caption"><a class="button button-xs button-secondary button-nina" href="{% url 'login' %}">learn more</a></div>
+          </div>
+          <div class="event-default-inner">
+            <h5><a class="event-default-title" href="{% url 'login' %}">Economics</a></h5><span class="heading-5">from KES300</span>
+          </div>
+        </article>
+      </div>
+      <div class="col-md-6 col-xl-4">
+        <article class="event-default-wrap">
+          <div class="event-default">
+            <figure class="event-default-image"><img src="{% static 'frontmain/images2/prog.jpg' %}" alt="" width="570" height="370"/>
+            </figure>
+            <div class="event-default-caption"><a class="button button-xs button-secondary button-nina" href="{% url 'login' %}">learn more</a></div>
+          </div>
+          <div class="event-default-inner">
+            <h5><a class="event-default-title" href="{% url 'login' %}">Programming</a></h5><span class="heading-5">from KES500</span>
+          </div>
+        </article>
+      </div>
+      <div class="col-md-6 col-xl-4">
+        <article class="event-default-wrap">
+          <div class="event-default">
+            <figure class="event-default-image"><img src="{% static 'frontmain/images2/law.jpg' %}" alt="" width="570" height="370"/>
+            </figure>
+            <div class="event-default-caption"><a class="button button-xs button-secondary button-nina" href="{% url 'login' %}">learn more</a></div>
+          </div>
+          <div class="event-default-inner">
+            <h5><a class="event-default-title" href="{% url 'login' %}">Law</a></h5><span class="heading-5">from KES300</span>
+          </div>
+        </article>
+      </div>
+      <div class="col-md-6 col-xl-4">
+        <article class="event-default-wrap">
+          <div class="event-default">
+            <figure class="event-default-image"><img src="{% static 'frontmain/images2/med.png' %}" alt="" width="570" height="370"/>
+            </figure>
+            <div class="event-default-caption"><a class="button button-xs button-secondary button-nina" href="{% url 'login' %}">learn more</a></div>
+          </div>
+          <div class="event-default-inner">
+            <h5><a class="event-default-title" href="{% url 'login' %}">Nursing</a></h5><span class="heading-5">from KES300</span>
+          </div>
+        </article>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
 <!-- Tips & tricks-->
 <section class="section section-lg novi-background bg-cover bg-default text-center">
   <div class="container-wide">
@@ -297,7 +399,29 @@
       </div>
     </div>
   </div>
-</section><a class="section section-banner" href="https://www.templatemonster.com/intense-multipurpose-html-template.html" style="background-image: url(images/banner/background-03-1920x310.jpg); background-image: -webkit-image-set( url(images/banner/background-03-1920x310.jpg) 1x, url(images/banner/background-03-3840x620.jpg) 2x )"><img src="images/banner/foreground-03-1600x310.png" srcset="images/banner/foreground-03-1600x310.png 1x, images/banner/foreground-03-3200x620.png 2x" alt="" width="1600" height="310"></a>
+</section>
+<div>
+
+  <footer class="section page-footer page-footer-minimal novi-background bg-cover text-center bg-gray-darker">
+    <div class="container container-wide">
+      <div class="row row-fix justify-content-sm-center align-items-md-center row-30">
+        <div class="col-md-10 col-lg-7 col-xl-4 text-xl-left"><a href="index.html"><img class="inverse-logo" src="images/logo-inverse-208x46.png" alt="" width="208" height="46"/></a></div>
+        <div class="col-md-10 col-lg-7 col-xl-4">
+          <p class="right">&#169;&nbsp;<span class="copyright-year"></span> All Rights Reserved. Design&nbsp;by&nbsp;<a href="https://www.templatemonster.com">TemplateMonster</a></p>
+        </div>
+        <div class="col-md-10 col-lg-7 col-xl-4 text-xl-right">
+          <ul class="group-xs group-middle"> 
+            <li><a class="icon novi-icon icon-md-middle icon-circle icon-secondary-5-filled mdi mdi-facebook" href="#"></a></li>
+            <li><a class="icon novi-icon icon-md-middle icon-circle icon-secondary-5-filled mdi mdi-twitter" href="#"></a></li>
+            <li><a class="icon novi-icon icon-md-middle icon-circle icon-secondary-5-filled mdi mdi-instagram" href="#"></a></li>
+            <li><a class="icon novi-icon icon-md-middle icon-circle icon-secondary-5-filled mdi mdi-google" href="#"></a></li>
+            <li><a class="icon novi-icon icon-md-middle icon-circle icon-secondary-5-filled mdi mdi-linkedin" href="#"></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+</div>
 
 {% endblock %}
 
