--- a/billing/templates/billing/payment.html
+++ b/billing/templates/billing/payment.html
@@ -162,7 +162,7 @@
                         type="text"
                         name="phonenumber"
                         id="phonenumber"
-                        placeholder="Enter phonumber, 07xxxxx"
+                        placeholder="Enter phonumber, 07000"
                         class="formbold-form-input"
                       />
               
@@ -265,7 +265,7 @@ button.addEventListener("click", () => {
                   //window.location.href= '{% url "home" %}';
 
                   setTimeout(function () {
-                    window.location.href = '{% url "home" %}'; //will redirect to your blog page (an ex: blog.html)
+                    window.location.href = '{% url "payment-complete" order_id %}'; //will redirect to your blog page (an ex: blog.html)
                  }, 2000);
 
 
