--- a/frontmain/templates/frontmain/OrderListViewAll.html
+++ b/frontmain/templates/frontmain/OrderListViewAll.html
@@ -4,21 +4,69 @@
 {% block content %}
 
 
+<style>
+
+    .fcc-btn {
+        background-color: #199319;
+        color: white;
+        padding:0.5rem 3rem;
+        text-decoration: none;
+    } 
+    
+    
+    .fcc-btn1 {
+        background-color: dodgerblue;
+        color: white;
+        padding:0.5rem 3rem;
+        text-decoration: none;
+        border-radius: 0.3rem;
+    }
+
+
+
+
+</style>
+
+
+
+
+
+
+{% if not orders %}
+
 <section>
-
-    <style>
-
-        .fcc-btn {
-            background-color: #199319;
-            color: white;
-            padding:0.5rem 3rem;
-            text-decoration: none;
-        }          
+    <div class="orderdetails">
+        <div class="sidediv1"></div>
+        <div class="no-order" >
 
 
+            <div class="card text-center">
+            
+                <div class="card-body">
+                  <h5 class="card-title">No Orders In Progress</h5>
+                  <p class="card-text mb-2">No Active Orders in Progress. Check for Complete Orders in the Complete Tab.</p>
+                  <a class="fcc-btn1 mt-2 mt-2 mb-2" href="{% url 'create_new' %}">Create Order</a>
+                </div>
+                
+              </div>
 
 
-    </style>
+
+
+        </div>
+        <div class="sidediv1"></div>
+    </div>
+
+
+
+
+</section>
+
+{% else  %}
+
+
+
+<section>
     <div class="orderdetails">
         <div class="sidediv1"></div>
         <div class="mt-3">
@@ -152,5 +200,6 @@
     
 
 </section>
+{% endif %}
 {% endblock %}
 
