--- a/frontmain/templates/frontmain/dash.html
+++ b/frontmain/templates/frontmain/dash.html
@@ -13,7 +13,7 @@
         <div class="home-content-2">
           <h3 class=" ml-1 mt-3" style="color: white;">The Best Writers<br>On The Market</h3>
           <hr>
-          <p class="text-spacing-sm" style="color: white;">We offer a variety of destinations to travel to, ranging from exotic to some extreme ones. They include very popular countries and cities like Paris, Rio de Janeiro, Cairo and a lot of others.</p><a class="button button-default-outline button-nina button-sm" href="#">learn more</a>
+          <p class="text-spacing-sm" style="color: white;">Our writers are thoroughly vetted and trained to deliver the highest possible quality for each paper they write. We only hire the best of the best in the market that are guaranteed to give you value for your money. </p><a class="button button-default-outline button-nina button-sm" href="#">learn more</a>
         </div>
         <div></div>
         
@@ -394,7 +394,7 @@
             <h3 class="box-cta-title">Get Your Essay Written Now by An Expert</h3>
             <p>Using our website, you can get a top notch essay on any subject within any deadline.</p>
           </div>
-          <div class="box-cta-inner"><a class="button button-secondary button-nina" href="#">Sign Up</a></div>
+          <div class="box-cta-inner"><a class="button button-secondary button-nina" href="{% url 'register' %}">Sign Up</a></div>
         </div>
       </div>
     </div>
@@ -405,9 +405,9 @@
   <footer class="section page-footer page-footer-minimal novi-background bg-cover text-center bg-gray-darker">
     <div class="container container-wide">
       <div class="row row-fix justify-content-sm-center align-items-md-center row-30">
-        <div class="col-md-10 col-lg-7 col-xl-4 text-xl-left"><a href="index.html"><img class="inverse-logo" src="images/logo-inverse-208x46.png" alt="" width="208" height="46"/></a></div>
+        <div class="col-md-10 col-lg-7 col-xl-4 text-xl-left"><a href="index.html"><img class="inverse-logo" src="{% static 'frontmain/images/logo-default-208x463.png' %}" alt="" width="208" height="46"/></a></div>
         <div class="col-md-10 col-lg-7 col-xl-4">
-          <p class="right">&#169;&nbsp;<span class="copyright-year"></span> All Rights Reserved. Design&nbsp;by&nbsp;<a href="https://www.templatemonster.com">TemplateMonster</a></p>
+          <p class="right">&#169;&nbsp;<span class="copyright-year"></span> All Rights Reserved. Ace-Stars</p>
         </div>
         <div class="col-md-10 col-lg-7 col-xl-4 text-xl-right">
           <ul class="group-xs group-middle"> 
