--- a/frontmain/templates/frontmain/about.html
+++ b/frontmain/templates/frontmain/about.html
@@ -409,9 +409,9 @@
       <footer class="section page-footer page-footer-minimal novi-background bg-cover text-center bg-gray-darker">
         <div class="container container-wide">
           <div class="row row-fix justify-content-sm-center align-items-md-center row-30">
-            <div class="col-md-10 col-lg-7 col-xl-4 text-xl-left"><a href="index.html"><img class="inverse-logo" src="images/logo-inverse-208x46.png" alt="" width="208" height="46"/></a></div>
+            <div class="col-md-10 col-lg-7 col-xl-4 text-xl-left"><a href="index.html"><img class="inverse-logo" src="{% static 'frontmain/images/logo-default-208x463.png' %}" alt="" width="208" height="46"/></a></div>
             <div class="col-md-10 col-lg-7 col-xl-4">
-              <p class="right">&#169;&nbsp;<span class="copyright-year"></span> All Rights Reserved. Design&nbsp;by&nbsp;<a href="https://www.templatemonster.com">TemplateMonster</a></p>
+              <p class="right">&#169;&nbsp;<span class="copyright-year"></span> All Rights Reserved. Ace-Stars</p>
             </div>
             <div class="col-md-10 col-lg-7 col-xl-4 text-xl-right">
               <ul class="group-xs group-middle"> 
