--- a/frontmain/templates/frontmain/front.html
+++ b/frontmain/templates/frontmain/front.html
@@ -131,12 +131,12 @@
                 <ul class="list-inline">
                   <li class="box-inline list-inline-item"><span class="icon novi-icon icon-md-smaller icon-secondary mdi mdi-phone"></span>
                     <ul class="list-comma">
-                      <li><a href="tel:#">1-800-1234-567</a></li>
-                      <li><a href="tel:#">1-800-6780-345</a></li>
+                      <li><a href="tel:#">0748 334063</a></li>
+                      <li><a href="tel:#">0742 549516</a></li>
                     </ul>
                   </li>
-                  <li class="box-inline list-inline-item"><span class="icon novi-icon icon-md-smaller icon-secondary mdi mdi-map-marker"></span><a href="#">2130 Fulton Street, San Diego, CA 94117-1080 USA</a></li>
-                  <li class="box-inline list-inline-item"><span class="icon novi-icon icon-md-smaller icon-secondary mdi mdi-email"></span><a href="mailto:#">mail@demolink.org</a></li>
+                  <li class="box-inline list-inline-item"><span class="icon novi-icon icon-md-smaller icon-secondary mdi mdi-map-marker"></span><a href="#">Nairobi, Kenya</a></li>
+                  <li class="box-inline list-inline-item"><span class="icon novi-icon icon-md-smaller icon-secondary mdi mdi-email"></span><a href="mailto:#">support@ace-stars.com</a></li>
                 </ul>
                 <ul class="list-inline">
                   <li class="list-inline-item"><a class="icon novi-icon icon-sm-bigger icon-gray-1 mdi mdi-facebook" href="#"></a></li>
