--- a/frontmain/templates/frontmain/orderslist.html
+++ b/frontmain/templates/frontmain/orderslist.html
@@ -167,7 +167,11 @@
               <a href="{% url 'order-list-view' %}">In Progress</a>
               <a href="{% url 'order-list-view-all' %}">All My Orders</a>
               <a href="{% url 'post-list' %}">Blog</a>
-              <a href="{% url 'logout' %}">Logout</a>
+              <form method="post" action="{% url 'logout' %}">
+                {% csrf_token %}
+              <a href="#" onclick="this.parentNode.submit();">Logout</a>
+              </form>
+              
             </div>
           </nav>
         </div>
