--- a/billing/templates/billing/payment.html
+++ b/billing/templates/billing/payment.html
@@ -223,7 +223,7 @@ button.addEventListener("click", () => {
 
             $.ajax({
                 type:'POST',
-                url:'/payments',
+                url:'/stkpush',
                 data: {
                     phonenumber: $('#phonenumber').val(),
                     order_pk: order_id,
