--- a/billing/templates/billing/payment.html
+++ b/billing/templates/billing/payment.html
@@ -265,7 +265,7 @@ button.addEventListener("click", () => {
                   //window.location.href= '{% url "home" %}';
 
                   setTimeout(function () {
-                    window.location.href = '{% url "payment-complete" order_id %}'; //will redirect to your blog page (an ex: blog.html)
+                    window.location.href = '{% url "payment-red-email" order_id %}'; //will redirect to your blog page (an ex: blog.html)
                  }, 2000);
 
 
