--- a/billing/templates/billing/welcomemail.html
+++ b/billing/templates/billing/welcomemail.html
@@ -240,7 +240,7 @@
                             <td style="overflow-wrap:break-word;word-break:break-word;padding:10px;font-family:'Cabin',sans-serif;" align="left">
 
                               <div style="font-size: 14px; color: #e5eaf5; line-height: 140%; text-align: center; word-wrap: break-word;">
-                                <p style="font-size: 14px; line-height: 140%;"><strong>W E L C O M E&nbsp; &nbsp;T O&nbsp; &nbsp;T E S T P R E P !</strong></p>
+                                <p style="font-size: 14px; line-height: 140%;"><strong>W E L C O M E&nbsp; &nbsp;T O&nbsp; &nbsp;A C E S T A R S !</strong></p>
                               </div>
 
                             </td>
@@ -298,7 +298,7 @@
 
                               <div style="font-size: 14px; line-height: 160%; text-align: center; word-wrap: break-word;">
                                 <p style="font-size: 14px; line-height: 160%;"><span style="font-size: 22px; line-height: 35.2px;">Hi, </span></p>
-                                <p style="font-size: 14px; line-height: 160%;"><span style="font-size: 18px; line-height: 28.8px;">You're ready to start your revision. Access hundreds of study questions and answers as well as detailed guide notes that will make sure you ace your exam in one attempt. Everything should be accessible from your dashboard. In case of any questions, feel free to contact us.</span></p>
+                                <p style="font-size: 14px; line-height: 160%;"><span style="font-size: 18px; line-height: 28.8px;">You're ready to get started on your first order. Get your papers written by the best writers in the market and avoid the challenges that come with working with unvetted writers. Our service is highly rated and will be one of the best you ever try. In case of any questions, feel free to contact us.</span></p>
                               </div>
 
                             </td>
@@ -334,7 +334,7 @@
 
                               <div style="font-size: 14px; line-height: 160%; text-align: center; word-wrap: break-word;">
                                 <p style="line-height: 160%; font-size: 14px;"><span style="font-size: 18px; line-height: 28.8px;">Thanks,</span></p>
-                                <p style="line-height: 160%; font-size: 14px;"><span style="font-size: 18px; line-height: 28.8px;">The Testprep Team</span></p>
+                                <p style="line-height: 160%; font-size: 14px;"><span style="font-size: 18px; line-height: 28.8px;">The Ace Stars Team</span></p>
                               </div>
 
                             </td>
