--- a/frontmain/templates/frontmain/orderslist.html
+++ b/frontmain/templates/frontmain/orderslist.html
@@ -163,9 +163,8 @@
 
             </div>
             <div id="myDropdown" class="dropdown-content">
-              <a href="#">My Profile</a>
+              <a href="{% url 'profile' %}">My Profile</a>
               <a href="{% url 'order-list-view' %}">In Progress</a>
-              <a href="{% url 'order-list-view-all' %}">All My Orders</a>
               <a href="{% url 'post-list' %}">Blog</a>
               <form method="post" action="{% url 'logout' %}">
                 {% csrf_token %}
